JavaScriptCore/kjs/TypeInfo.h
@@ -32,8 +32,9 @@
 namespace JSC {
 
     // WebCore uses this to make document.all and style.filter undetectable.
-    static const unsigned MasqueradesAsUndefined = 0x1;
-    static const unsigned ImplementsHasInstance = 0x2;
+    static const unsigned MasqueradesAsUndefined = 1;
+    static const unsigned ImplementsHasInstance = 1 << 1;
+    static const unsigned OverridesHasInstance = 1 << 2;
 
     class TypeInfo {
         friend class CTI;
@@ -44,7 +45,9 @@ namespace JSC {
 
         bool masqueradesAsUndefined() const { return m_flags & MasqueradesAsUndefined; }
         bool implementsHasInstance() const { return m_flags & ImplementsHasInstance; }
+        bool overridesHasInstance() const { return m_flags & OverridesHasInstance; }
 
+        unsigned flags() const { return m_flags; }
     private:
         JSType m_type;
         unsigned m_flags;
